--- a/package.json
+++ b/package.json
@@ -2,5 +2,7 @@
   "name": "resell-pro-pages",
   "private": true,
   "type": "module",
-  "dependencies": { "@neondatabase/serverless": "0.10.3" }
+  "dependencies": {
+    "@neondatabase/serverless": "0.10.3"
+  }
 }
