--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "resell-pro-pages",
   "private": true,
+  "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "@neondatabase/serverless": "0.10.3"
+    "@neondatabase/serverless": "^0.10.3",
+    "bcryptjs": "^2.4.3"
   }
 }
