--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.10.3",
     "bcryptjs": "^2.4.3"
+    "itty-router-extras": "^0.5.2"
   }
 }
